[tool.poetry]
name = "tahrir"
version = "1.1.1"
description = "A pyramid app for issuing your own Open Badges"

license = "AGPLv3+ with additional permission"

authors = [
  "Ralph Bean <rbean@redhat.com>",
  "Fedora Infrastructure <admin@fedoraproject.org>",
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/fedora-infra/tahrir"
homepage = "https://github.com/fedora-infra/tahrir"

packages = [
    { include = "tahrir" },
]

include = [
    { path = "tests/*", format = "sdist" },
]

classifiers = [
    "Environment :: Web Environment",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.9.0"
pyramid = "^2.0.2"
pyramid-mako = "^1.1.0"
tahrir-api = "^1.1.0"
sqlalchemy = "^2.0.29"
pyramid-tm = "^2.5"
qrcode = "^7.4.2"
dogpile-cache = "^1.3.2"
docutils = "^0.20.1 || ^0.21.0"
python-dateutil = "^2.9.0.post0"
feedgen = "^1.0.0"
requests = "^2.31.0"
rdflib = "^7.0.0"
pytz = "^2024.1"
pillow = "^10.2.0"
magickwand = "^0.2"
authlib = "^1.3.0"
gunicorn = ">=21.2,<23.0"
gevent = "^24.2.1"
psycopg2 = "^2.9.9"
fedora-messaging = "^3.5.0"
backoff = "^2.2.1"
tahrir-messages = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
coverage = "^7.4.4"
ruff = "^0.3.5 || ^0.4.0"
black = "^24.3.0"
sphinx = "^7.2.6"
pyyaml = "^6.0.1"

[tool.poetry.plugins."paste.app_factory"]
main = "tahrir:main"


[tool.coverage.run]
branch = true
source = [
    "tahrir",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
omit = [
    "tests/*",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
